Closed
Bug 1286753
Opened 8 years ago
Closed 8 years ago
Candidate window is always located at 1st character of editable text
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
VERIFIED
FIXED
mozilla50
People
(Reporter: m_kato, Assigned: m_kato)
References
Details
(Keywords: regression)
Attachments
(1 file)
58 bytes,
text/x-review-board-request
|
masayuki
:
review+
gchang
:
approval-mozilla-aurora+
gchang
:
approval-mozilla-beta+
|
Details |
Although I don't find regression range yet, candidate window is always located at first character instead of composing character.
Patch is coming soon.
Assignee | ||
Comment 1•8 years ago
|
||
TargetClauseOffset is the offset from start composition offset. So we should add start composition to calaculate correct rects.
Review commit: https://reviewboard.mozilla.org/r/64172/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/64172/
Attachment #8770842 -
Flags: review?(masayuki)
Assignee | ||
Updated•8 years ago
|
status-firefox47:
--- → unaffected
status-firefox48:
--- → affected
status-firefox49:
--- → affected
Assignee | ||
Comment 2•8 years ago
|
||
This seems to be regression by bug 1137565
Comment 3•8 years ago
|
||
Comment on attachment 8770842 [details]
Bug 1286753 - Candidate window should be located under composing string.
https://reviewboard.mozilla.org/r/64172/#review61232
Good catch! We should uplift this.
# Sorry, I forgot to publish this...
Attachment #8770842 -
Flags: review?(masayuki) → review+
Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/12217312864d
Candidate window should be located under composing string. r=masayuki
Comment 5•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Assignee | ||
Comment 6•8 years ago
|
||
[Tracking Requested - why for this release]:
This is regression from firefox 48. This issue influences all IME user's usability on Linux.
tracking-firefox48:
--- → ?
tracking-firefox49:
--- → ?
Assignee | ||
Comment 7•8 years ago
|
||
Comment on attachment 8770842 [details]
Bug 1286753 - Candidate window should be located under composing string.
Approval Request Comment
[Feature/regressing bug #]:
Bug 1137565
[User impact if declined]:
When using IME for CJK on Linux, candidate window by IME isn't located at correct position.
[Describe test coverage new/current, TreeHerder]:
Landed in m-c. And I verified on multiple Linux distributions (Ubuntu 14.04, 16.04, Fedora 24, and Debian/sid)
[Risks and why]:
Low. Set candidate window to correct position only.
[String/UUID change made/needed]:
No
Attachment #8770842 -
Flags: approval-mozilla-beta?
Attachment #8770842 -
Flags: approval-mozilla-aurora?
Comment 8•8 years ago
|
||
Comment on attachment 8770842 [details]
Bug 1286753 - Candidate window should be located under composing string.
This patch fixes a regression which sets candidate window by IME to correct position. Take it in 48 beta 10 and aurora.
Attachment #8770842 -
Flags: approval-mozilla-beta?
Attachment #8770842 -
Flags: approval-mozilla-beta+
Attachment #8770842 -
Flags: approval-mozilla-aurora?
Attachment #8770842 -
Flags: approval-mozilla-aurora+
Updated•8 years ago
|
Comment 10•8 years ago
|
||
Tracking because we care about our IME users
Comment 11•8 years ago
|
||
bugherder uplift |
Comment 12•8 years ago
|
||
bugherder uplift |
Comment 13•8 years ago
|
||
Reproduced on 48b9 with Chinese Pinyin, Ubuntu 14.04.
Verified fixed FX 48b10, 49.0a2 (2016-07-25), 50.0a1 (2016-07-25) Ubuntu 14.04.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•