Bug 1286753 - Candidate window should be located under composing string. r=masayuki

TargetClauseOffset is the offset from start composition offset.  So we should add start composition to calaculate correct rects.

MozReview-Commit-ID: 4qCpKvw2Eb4